--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1472,3 +1472,28 @@ font-weight: 400;
 line-height: 18px; /* 138.462% */
 letter-spacing: -0.078px;
 }
+
+/* listing forn */
+
+.listing-font-1 {
+color: #000 !important;
+font-size: 24px !important;
+font-weight: 400 !important;
+line-height: 24px; /* 100% */
+}
+
+.listing-font-2 {
+color: var(--Grayscale-Gray-100, #1E1E20);
+font-size: 24px;
+font-weight: 400;
+line-height: 118%; /* 28.32px */
+letter-spacing: -0.48px;
+}
+
+.listing-font-3 {
+color: var(--Grayscale-Gray-80, #4B4B4D);
+font-size: 16px;
+font-weight: 400;
+line-height: 18px; /* 112.5% */
+letter-spacing: -0.078px;
+}
