--- a/css/listing.css
+++ b/css/listing.css
@@ -265,7 +265,7 @@ justify-content: center;
 gap: 32px;
 }
 
-.discount-minus , .discount-plus {
+.discount-minus , .discount-plus, .search-location-icon {
 display: flex;
 padding: 16.8px;
 height: 48px;
@@ -365,10 +365,10 @@ learn more
   padding-left: 1rem;
 }
 
-.search-box img {
+.search-box-input img {
   position: absolute;
   right: 5%;
-  top: 60%;
+  top: 35%;
 }
 .search-box-2 input {
   border-radius: 12px !important;
@@ -380,9 +380,28 @@ learn more
   width: 100px;
   border-radius: 12px;
 }
+.listing-search-main {
+  position: relative;
+}
+
+.listing-search-suggestions {
+display: flex;
+width: 100%;
+padding: 16px 0px;
+flex-direction: column;
+align-items: flex-start;
+gap: 16px;
+border-radius: 16px;
+border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+background: #FFF;
+/* Elevation */
+box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
+position: absolute;
+top: 105%;
+}
 
 .mission-display {
-  display: flex;
+display: flex;
 height: 250px;
 padding: 24px;
 flex-direction: column;
@@ -393,6 +412,31 @@ align-self: stretch;
 border-radius: 16px;
 border: 1px dashed var(--Grayscale-Gray-50, #D9D9D9);
 background: #FFF;
+}
+
+
+.mission-display-text-filled {
+display: flex;
+padding: 24px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+align-self: stretch;
+border-radius: 16px;
+background: var(--LIGHT-BLUE, #F7FBFE);
+}
+
+.listing-suggested-location {
+display: flex;
+padding: 3.5px 24px;
+align-items: center;
+gap: 12px;
+align-self: stretch;
+cursor: pointer;
+}
+
+.listing-suggested-location:hover {
+  background: var(--Grayscale-Gray-16, #F6F6F6);
 }
 
 /*------------------------------
