--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1497,3 +1497,12 @@ font-weight: 400;
 line-height: 18px; /* 112.5% */
 letter-spacing: -0.078px;
 }
+
+.listing-font-4 {
+  
+  color: var(--Grayscale-Gray-100, #1E1E20);
+font-size: 16px;
+font-weight: 500;
+line-height: 18px; /* 112.5% */
+letter-spacing: -0.078px;
+}
