--- a/css/listing.css
+++ b/css/listing.css
@@ -409,9 +409,9 @@ justify-content: center;
 align-items: center;
 gap: 48px;
 align-self: stretch;
+background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='16' ry='16' stroke='%23333' stroke-width='1' stroke-dasharray='9' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 border-radius: 16px;
-border: 1px dashed var(--Grayscale-Gray-50, #D9D9D9);
-background: #FFF;
+
 }
 
 
