--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1404,17 +1404,13 @@ letter-spacing: -0.078px;
 .dashboard-font-23 {
 color: #000;
 font-feature-settings: 'ss03' on;
-font-family: "DM Sans";
 font-size: 16px;
-font-style: normal;
 font-weight: 500;
 line-height: 36px; /* 225% */
 }
 .dashboard-font-24 {
 color: var(--Primary-Primary-50, #0D99FF);
-font-family: "DM Sans";
 font-size: 14px;
-font-style: normal;
 font-weight: 500;
 line-height: 18px; /* 128.571% */
 letter-spacing: -0.078px;
@@ -1505,4 +1501,11 @@ font-size: 16px;
 font-weight: 500;
 line-height: 18px; /* 112.5% */
 letter-spacing: -0.078px;
+}
+.listing-font-4 {
+color: var(--Grayscale-Gray-80, #4B4B4D);
+font-size: 18px;
+font-weight: 500;
+line-height: 118%; /* 21.24px */
+letter-spacing: -0.36px;
 }
