--- a/css/listing.css
+++ b/css/listing.css
@@ -254,6 +254,7 @@
   background: #FFF;
   /* Elevation */
   box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
+  margin: 0 .5rem;
 }
 
 
@@ -599,6 +600,28 @@ background: var(--LIGHT-BLUE, #F7FBFE);
 color: #0D99FF;
 }
 
+.rooms-number div.active img {
+filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(349deg) brightness(103%) contrast(104%);
+}
+.rooms-number div.active {
+  background-color: #0D99FF;
+  border: 1px solid #0D99FF;
+}
+
+.property-select-radio.active img {
+  filter: brightness(0) saturate(100%) invert(47%) sepia(79%) saturate(3136%) hue-rotate(187deg) brightness(104%) contrast(104%);
+}
+.property-select-radio.active p {
+  color: #0D99FF;
+}
+.property-select-radio.active  {
+  border-color:  #0D99FF;
+ background: #F7FBFE;
+ 
+}
+
+
+
 
 
 
@@ -863,9 +886,9 @@ letter-spacing: -0.078px;
 
   .add-a-listing-main {
     border-radius: 0;
-    padding-top: 3rem;
     padding: 2%;
-    padding: 2rem;
+    padding-top: 3rem;
+    gap: 24px;
     margin-top: 1rem;
   }
 
@@ -920,4 +943,9 @@ letter-spacing: -0.078px;
     font-size: 14px;
   }
 
+  /* buttons mobile */
+  .continue-button,
+  .Add-listing-button {
+    height: 50px;
+  }
 }
