--- a/css/listing.css
+++ b/css/listing.css
@@ -12,6 +12,24 @@
   border-bottom: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
 }
 
+/* process-status-indicator */
+.process-status-indicator {
+  position: relative;
+  background: #F6F6F6;
+  width: 100%;
+  height: 10px;
+  overflow: hidden;
+  border: 1rem; /* Adjust as needed */
+}
+
+.process-status-fill {
+  border-radius: 0 1rem 1rem 0;
+  background: var(--PRIMARY-MAIN, #0D99FF);
+  height: 100%;
+  width: 40%; /* Change this value dynamically */
+}
+
+
 
 .listing-section-1 {
   width: 100%;
@@ -76,7 +94,8 @@
 .donation-publish,
 .set-your-pricing,
 .Amenites,
-.about-details {
+.about-details,
+.edit-pictures {
   display: flex;
   max-width: 720px;
   padding: 0px 64px;
@@ -90,7 +109,7 @@
 }
 
 
-.import-create-listing, 
+.import-create-listing,
 .Describe-your-Airbnb {
   cursor: pointer;
   display: flex;
@@ -104,17 +123,17 @@
   background: var(--Gray-04, #FCFCFC);
 }
 
-.import-create-listing.active ,
+.import-create-listing.active,
 .Describe-your-Airbnb.active {
   background-color: #0D99FF;
 }
 
-.import-create-listing.active p ,
+.import-create-listing.active p,
 .Describe-your-Airbnb.active p {
   color: white;
 }
 
-.import-create-listing.active img ,
+.import-create-listing.active img,
 .Describe-your-Airbnb.active img {
   filter: brightness(0) saturate(100%) invert(98%) sepia(2%) saturate(0%) hue-rotate(87deg) brightness(106%) contrast(101%);
 }
@@ -525,6 +544,7 @@ learn more
 .listing-property-details {
   width: 100%;
 }
+
 .listing-property-details .listin-rooms {
   display: flex;
   justify-content: space-between;
@@ -537,19 +557,20 @@ learn more
   align-items: center;
   gap: .5rem;
 }
+
 .listing-property-details .rooms-number div {
-display: flex;
-padding: 8px;
-width: 38px;
-height: 38px;
-justify-content: center;
-align-items: center;
-gap: 10px;
-border-radius: 80px;
-border: 1px solid var(--GREY, #747474);
+  display: flex;
+  padding: 8px;
+  width: 38px;
+  height: 38px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 80px;
+  border: 1px solid var(--GREY, #747474);
 }
 
-.add-location{
+.add-location {
   width: 100%;
   border-radius: 1rem;
   overflow: hidden;
@@ -563,18 +584,20 @@ border: 1px solid var(--GREY, #747474);
   gap: 1rem;
   margin: auto;
 }
+
 .General-features {
-display: flex;
-padding: 16px;
-width: 29%;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
-gap: 24px;
-border-radius: 16px;
-border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-background: var(--Gray-04, #FCFCFC);
+  display: flex;
+  padding: 16px;
+  width: 29%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+  border-radius: 16px;
+  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  background: var(--Gray-04, #FCFCFC);
 }
+
 .General-features div {
   display: flex;
   justify-content: space-between;
@@ -587,22 +610,24 @@ background: var(--Gray-04, #FCFCFC);
 }
 
 .General-features.active {
-border-radius: 16px;
-border: 1px solid var(--Primary-Primary-50, #0D99FF);
-background: var(--LIGHT-BLUE, #F7FBFE);
+  border-radius: 16px;
+  border: 1px solid var(--Primary-Primary-50, #0D99FF);
+  background: var(--LIGHT-BLUE, #F7FBFE);
 }
 
 .General-features.active img {
   filter: brightness(0) saturate(100%) invert(47%) sepia(79%) saturate(3136%) hue-rotate(187deg) brightness(104%) contrast(104%);
   opacity: 1;
 }
+
 .General-features.active p {
-color: #0D99FF;
+  color: #0D99FF;
 }
 
 .rooms-number div.active img {
-filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(349deg) brightness(103%) contrast(104%);
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(349deg) brightness(103%) contrast(104%);
 }
+
 .rooms-number div.active {
   background-color: #0D99FF;
   border: 1px solid #0D99FF;
@@ -611,13 +636,15 @@ filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-r
 .property-select-radio.active img {
   filter: brightness(0) saturate(100%) invert(47%) sepia(79%) saturate(3136%) hue-rotate(187deg) brightness(104%) contrast(104%);
 }
+
 .property-select-radio.active p {
   color: #0D99FF;
 }
-.property-select-radio.active  {
-  border-color:  #0D99FF;
- background: #F7FBFE;
- 
+
+.property-select-radio.active {
+  border-color: #0D99FF;
+  background: #F7FBFE;
+
 }
 
 
@@ -694,16 +721,16 @@ input[type=text] {
 
 /* set your pricing */
 .free-paid-radio,
-.section-2{
-display: flex;
-padding: 24px;
-flex-direction: column;
-align-items: flex-start;
-gap: 12px;
-align-self: stretch;
-border-radius: 16px;
-border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-background: #FFF;
+.section-2 {
+  display: flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  align-self: stretch;
+  border-radius: 16px;
+  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  background: #FFF;
 }
 
 .free-paid-radio.active {
@@ -712,36 +739,128 @@ background: #FFF;
 
 .free-paid-radio .free-radio,
 .section-2 .damage-section {
-display: flex;
-gap: 10px;
-width: 100%;
+  display: flex;
+  gap: 10px;
+  width: 100%;
 }
 
 
 /* about details */
 
 .about-details-offer textarea,
-.about-details-place textarea{
-display: flex;
-padding: 24px 24px 0 24px ;
-align-items: flex-start;
-gap: 10px;
-align-self: stretch;
-border-radius: 16px;
-border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-background: #FDFDFD;
-width: 100%;
-resize: none;
-min-height: 150px;
-height: auto;
+.about-details-place textarea {
+  display: flex;
+  padding: 24px 24px 0 24px;
+  align-items: flex-start;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 16px;
+  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  background: #FDFDFD;
+  width: 100%;
+  resize: none;
+  min-height: 150px;
+  height: auto;
 
-color: var(--Grayscale-Gray-60, #ACACB0);
-font-size: 14px;
-font-weight: 400;
-line-height: normal;
-letter-spacing: -0.078px;
+  color: var(--Grayscale-Gray-60, #ACACB0);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.078px;
 }
 
+
+/*------------------------------
+ pictures
+------------------------------*/
+
+.pictures-grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: .5rem;
+}
+
+.pictures-grid .added-pictures {
+  position: relative;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.pictures-grid .added-pictures-button {
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='16' ry='16' stroke='%23333' stroke-width='2' stroke-dasharray='9%2c 9%2c 9' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  flex-direction: column;
+}
+
+.pictures-grid .added-pictures:first-child {
+  grid-column: 1 / 3;
+  grid-row: 1/2;
+}
+
+.pictures-grid .added-pictures {
+  aspect-ratio: 16/13;
+  margin: .5rem;
+  position: relative;
+}
+
+.pictures-grid .added-pictures .dropdown {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-image: none;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.pictures-grid .added-pictures .dropdown .dropdown-menu {
+  border-radius: 16px;
+  border: 1px solid #E7E7E7;
+  background: #FFF;
+  /* Elevation */
+  box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
+}
+.pictures-grid .added-pictures .dropdown .btn {
+  border-color: transparent;
+}
+.dropdown-toggle::after {
+  display: none;
+}
+
+.pictures-grid .added-pictures .cover-photo.active  {
+  display: flex;
+}
+.pictures-grid .added-pictures .cover-photo  {
+  display: none;
+  padding: 7.5px 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 32px;
+  border: 0.5px solid var(--White-White-24, rgba(255, 255, 255, 0.24));
+  background: rgba(0, 0, 0, 0.30);
+  backdrop-filter: blur(12px);
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  /* 121.429% */
+  letter-spacing: -0.07px;
+}
+
+
+.pictures-grid .added-pictures img {
+  width: 100%;
+  height: 100%;
+}
 
 /*------------------------------
  buttons 
@@ -751,6 +870,7 @@ letter-spacing: -0.078px;
   color: white;
   background-color: #0D99FF;
 }
+
 .button-blue {
   background-color: #0D99FF;
   color: white;
@@ -875,7 +995,8 @@ letter-spacing: -0.078px;
   .donation-publish,
   .set-your-pricing,
   .Amenites,
-  .about-details {
+  .about-details,
+  .edit-pictures {
     padding: 0px .5rem;
     gap: 22px;
   }
@@ -912,6 +1033,7 @@ letter-spacing: -0.078px;
   .import-create-listing {
     height: 54px;
   }
+
   .Describe-your-Airbnb {
     padding: 10px;
   }
@@ -927,6 +1049,7 @@ letter-spacing: -0.078px;
     padding: 0px 1rem;
     gap: 28px;
   }
+
   .Amenites {
     padding: 0px 1rem;
   }
@@ -937,7 +1060,7 @@ letter-spacing: -0.078px;
 
   .General-features-main {
     gap: 12px;
-}
+  }
 
   .General-features p {
     font-size: 14px;
