--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,36 +1,61 @@
 /* mobile search bar  */
-#search-bar{display: none;
+#search-bar {
+  display: none;
 }
-@media (max-width:700px) {
-    #search-bar{display: block;}
+@media (max-width: 700px) {
+  #search-bar {
+    display: block;
+  }
 }
 
-.search-bar {display: none !important;}
-.search-main {padding: 0 !important;}
-.search-main .filter-area button {font-size: 10px !important;}
-@media (max-width:700px) {
-  .filter-button-m-n {display: none;}
-  .search-bar { display: flex !important;}
-  .filter-menu-main { padding: 0 !important;}
+.search-bar {
+  display: none !important;
+}
+.search-main {
+  padding: 0 !important;
+}
+.search-main .filter-area button {
+  font-size: 10px !important;
+}
+@media (max-width: 700px) {
+  .filter-button-m-n {
+    display: none;
+  }
+  .search-bar {
+    display: flex !important;
+  }
+  .filter-menu-main {
+    padding: 0 !important;
+  }
 }
 
 /*----------------------------
  homepage searchbar starts
  --------------------------- */
 
-#search-box-m {transition: translatey(-50%) 0.4s ease;}
+#search-box-m {
+  transition: translatey(-50%) 0.4s ease;
+}
 
-#search-box-m {margin: auto;}
-.bg-white header {background-image: none !important;}
-.drop-sticky {transition: all .5s ease-in-out;}
+#search-box-m {
+  margin: auto;
+}
+.bg-white header {
+  background-image: none !important;
+}
+.drop-sticky {
+  transition: all 0.5s ease-in-out;
+}
 
 .bg-white {
   background-color: white !important;
   border-bottom: 1px solid #4444;
 }
 
-@media (min-width:1000px) {
-  #bg-white header {background-image: none !important;}
+@media (min-width: 1000px) {
+  #bg-white header {
+    background-image: none !important;
+  }
 
   .search-box-m {
     position: fixed;
@@ -41,7 +66,9 @@
     transform: translatex(-50%);
   }
 
-  .search-box-m .drop-sticky {padding: 15px !important;}
+  .search-box-m .drop-sticky {
+    padding: 15px !important;
+  }
 
   /*
   .search-box-m .drop-sticky span {display: none;}
@@ -88,7 +115,7 @@
   align-items: center;
   gap: 1rem;
   flex-wrap: wrap;
-  padding: .4rem;
+  padding: 0.4rem;
 }
 
 .listing-header .searchbar-default-text span,
@@ -96,25 +123,32 @@
   display: none;
 }
 .listing-header header input,
-.listing-map-header header input{
-width: 110px;
+.listing-map-header header input {
+  width: 110px;
 }
 .listing-header .dropdown a,
 .listing-map-header .dropdown a {
   min-width: fit-content !important;
 }
 
-.d-n {display: none !important;}
+.d-n {
+  display: none !important;
+}
 
-@media (max-width:700px) {
-  
-  .m-n {display: none !important;}
-  .d-n {display: block !important;}
+@media (max-width: 700px) {
+  .m-n {
+    display: none !important;
+  }
+  .d-n {
+    display: block !important;
+  }
+  .d-n-f {
+    display: flex !important;
+  }
 
   .home-crew-logo {
     margin: auto;
   }
-
 
   .search-main {
     position: fixed;
@@ -132,3 +166,228 @@ width: 110px;
     flex-direction: column;
   }
 }
+
+/* -----------------------------
+ Filter nenu css
+------------------------------*/
+.filter-menu-main {
+  display: flex;
+  align-items: center;
+  overflow-x: scroll;
+  margin-bottom: .5rem;
+}
+.filter-menu-main::-webkit-scrollbar {
+  display: none;
+}
+
+.filter-button {
+  position: relative;
+  border: none;
+  margin-top: 1rem;
+  margin-right: 5px;
+}
+
+.filter-button button {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+/*  */
+.filter-menu button img {
+  width: 18px !important ;
+  height: 18px !important;
+  object-fit: fill;
+}
+.filter-menu button {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  margin-top: 1rem;
+}
+.filter-menu button img:hover {
+  fill: #076cb6;
+}
+
+.filter-menu button {
+  border: 1px solid #75757524 !important;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bouble-notification {
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -2px;
+  right: 10px;
+  width: 18px;
+  height: 18px;
+  font-size: 10px;
+}
+
+.filter-button-m button {
+  width: 38px;
+  height: 38px;
+}
+
+/* -----------------------------
+ Filter Model Poupup
+------------------------------*/
+.type-list {
+  display: flex;
+  list-style: none;
+  gap: 1rem;
+}
+
+.type-list li {
+  border: 1px solid #757575;
+  display: flex;
+  width: 147.5px;
+  padding: 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 12px;
+  border-radius: 10px;
+  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.8));
+  background: var(--White-White-100, #fff);
+}
+
+.type-list li.active {
+  background-color: #e9f4fc;
+  color: #2587cf;
+}
+
+.divider {
+  background: rgba(172, 172, 176, 0.24);
+  width: 100%;
+  height: 1px;
+  margin: 1rem 0px;
+}
+
+.d-f-jc-b {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.show-place-button {
+  display: flex;
+  width: 180px;
+  height: 40px;
+  padding: 9.119px 13.679px;
+  justify-content: center;
+  align-items: center;
+  gap: 11.399px;
+  border-radius: 16px;
+  background: var(--PRIMARY-MAIN, #0d99ff);
+  color: #ffffff;
+  border: none;
+}
+
+.results-text {
+  color: var(--Grayscale-Gray-80, #4b4b4d);
+  font-size: 13px !important;
+  font-weight: 400;
+  line-height: 18px; /* 138.462% */
+  letter-spacing: -0.078px;
+}
+
+.active {
+  color: var(--Primary-Primary-50, #0d99ff);
+}
+
+.module-font-1 {
+  color: var(--Grayscale-Gray-80, #4b4b4d);
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+}
+
+/* input range between */
+.slider-container {
+  position: relative;
+  width: 300px;
+  height: 30px;
+  margin: 20px auto;
+}
+
+.slider-container input[type="range"] {
+  position: absolute;
+  width: 100%;
+  height: 8px;
+  background: transparent;
+  pointer-events: none; /* Hide the slider tracks */
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.slider-container input[type="range"]::-webkit-slider-runnable-track {
+  background: transparent;
+}
+
+.slider-container input[type="range"]::-moz-range-track {
+  background: red;
+}
+
+.slider-container input[type="range"]::-ms-track {
+  background: #747474;
+  border: none;
+}
+
+.slider-container input[type="range"]::-webkit-slider-thumb {
+  pointer-events: all;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.slider-container input[type="range"]::-moz-range-thumb {
+  pointer-events: all;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+}
+
+.slider-container input[type="range"]::-ms-thumb {
+  pointer-events: all;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+}
+
+.range-bar {
+  position: absolute;
+  top: 10px;
+  height: 8px;
+  background: #007bff;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.output {
+  text-align: center;
+  font-size: 18px;
+}
+/* -----------------------------
+ Filter Model Poupup ends
+------------------------------*/
