--- a/css/listing-map.css
+++ b/css/listing-map.css
@@ -1,157 +1,4 @@
 /* -----------------------------
- Filter Model Poupup
-------------------------------*/
-.type-list {
-  display: flex;
-  list-style: none;
-  gap: 1rem;
-}
-
-.type-list li {
-border: 1px solid #757575;
-display: flex;
-width: 147.5px;
-padding: 12px;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
-gap: 12px;
-border-radius: 10px;
-border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-background: var(--White-White-100, #FFF);
-}
-
-.type-list li.active {
-  background-color: #E9F4FC;
-  color: #2587CF;
-}
-
-.divider {
-  background: rgba(172, 172, 176, 0.24);
-  width: 100%;
-  height: 1px;
-  margin: 1rem 0px;
-}
-
-.d-f-jc-b {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  }
-
-.show-place-button {
-display: flex;
-width: 180px;
-height: 40px;
-padding: 9.119px 13.679px;
-justify-content: center;
-align-items: center;
-gap: 11.399px;
-border-radius: 16px;
-background: var(--PRIMARY-MAIN, #0D99FF);
-color: #FFFFFF;
-border: none;
-}
-
-.results-text {
-color: var(--Grayscale-Gray-80, #4B4B4D);
-font-size: 13px !important;
-font-weight: 400;
-line-height: 18px; /* 138.462% */
-letter-spacing: -0.078px;
-}
-
- .active {
-  color: var(--Primary-Primary-50, #0D99FF);
-}
-
-.module-font-1 {
-  color: var(--Grayscale-Gray-80, #4B4B4D);
-font-size: 17px;
-font-weight: 500;
-line-height: 22px;
-letter-spacing: -0.408px;
-}
-
-/* input range between */
-.slider-container {
-  position: relative;
-  width: 300px;
-  height: 30px;
-  margin: 20px auto;
-}
-
-.slider-container input[type="range"] {
-  position: absolute;
-  width: 100%;
-  height: 8px;
-  background: transparent;
-  pointer-events: none; /* Hide the slider tracks */
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-.slider-container input[type="range"]::-webkit-slider-runnable-track {
-  background: transparent;
-}
-
-.slider-container input[type="range"]::-moz-range-track {
-  background: red;
-}
-
-.slider-container input[type="range"]::-ms-track {
-  background: #747474;
-  border: none;
-}
-
-.slider-container input[type="range"]::-webkit-slider-thumb {
-  pointer-events: all;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #007bff;
-  cursor: pointer;
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-.slider-container input[type="range"]::-moz-range-thumb {
-  pointer-events: all;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #007bff;
-  cursor: pointer;
-}
-
-.slider-container input[type="range"]::-ms-thumb {
-  pointer-events: all;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #007bff;
-  cursor: pointer;
-}
-
-.range-bar {
-  position: absolute;
-  top: 10px;
-  height: 8px;
-  background: #007bff;
-  z-index: 0;
-  pointer-events: none;
-}
-
-.output {
-  text-align: center;
-  font-size: 18px;
-}
-/* -----------------------------
- Filter Model Poupup ends
-------------------------------*/
-
-/* -----------------------------
  listing map starts
 ------------------------------*/
 .map-main {
@@ -270,8 +117,10 @@ background: var(--Shades-White, #FFF);
 }
 .decreade-Map .left-Map .filter-menu-main {
   position: fixed;
-  top: 4.5rem;
+  top: 3.5rem;
   transition: none;
+  margin-top: 0 !important;
+  margin-left: 1rem;
 }
 .increase-Map .left-Map .filter-menu-main {
  margin-right: 10%;
