--- a/css/homepage.css
+++ b/css/homepage.css
@@ -98,9 +98,7 @@
  listing.html and listing-map.html searchbar starts
  --------------------------- */
 
-.listing-header,
-.details-header,
-.listing-map-header {
+ .header-parent {
   z-index: 100;
   background-color: #fff;
   border-bottom: 1px solid #74747436;
@@ -109,32 +107,27 @@
   left: 0;
   right: 0;
 }
-.listing-header header,
-.details-header header,
-.listing-map-header header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-  flex-wrap: wrap;
-  padding: 0.4rem;
-}
+    .header-parent header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+        flex-wrap: wrap;
+        padding: 0.4rem;
+    }
 
-.listing-header .searchbar-default-text span,
-.details-header .searchbar-default-text span,
-.listing-map-header .searchbar-default-text span {
-  display: none;
-}
-.listing-header header input,
-.details-header header input,
-.listing-map-header header input {
-  width: 110px;
-}
-.listing-header .dropdown a,
-.details-header .dropdown a,
-.listing-map-header .dropdown a {
-  min-width: fit-content !important;
-}
+    .header-parent .searchbar-default-text span {
+        display: none;
+    }
+
+    .header-parent header input {
+        width: 110px;
+    }
+
+    .header-parent .dropdown a {
+        min-width: fit-content !important;
+    }
+
 
 .d-n {
   display: none !important;
@@ -321,14 +314,14 @@
 }
 
 /* input range between */
-.slider-container {
+.range-group .slider-container {
   position: relative;
   width: 300px;
   height: 30px;
   margin: 20px auto;
 }
 
-.slider-container input[type="range"] {
+.range-group .slider-container input[type="range"] {
   position: absolute;
   width: 100%;
   height: 8px;
@@ -338,20 +331,20 @@
   appearance: none;
 }
 
-.slider-container input[type="range"]::-webkit-slider-runnable-track {
+.range-group .slider-container input[type="range"]::-webkit-slider-runnable-track {
   background: transparent;
 }
 
-.slider-container input[type="range"]::-moz-range-track {
+.range-group .slider-container input[type="range"]::-moz-range-track {
   background: red;
 }
 
-.slider-container input[type="range"]::-ms-track {
+.range-group .slider-container input[type="range"]::-ms-track {
   background: #747474;
   border: none;
 }
 
-.slider-container input[type="range"]::-webkit-slider-thumb {
+.range-group .slider-container input[type="range"]::-webkit-slider-thumb {
   pointer-events: all;
   width: 20px;
   height: 20px;
@@ -362,7 +355,7 @@
   appearance: none;
 }
 
-.slider-container input[type="range"]::-moz-range-thumb {
+.range-group .slider-container input[type="range"]::-moz-range-thumb {
   pointer-events: all;
   width: 20px;
   height: 20px;
@@ -371,7 +364,7 @@
   cursor: pointer;
 }
 
-.slider-container input[type="range"]::-ms-thumb {
+.range-group .slider-container input[type="range"]::-ms-thumb {
   pointer-events: all;
   width: 20px;
   height: 20px;
@@ -396,3 +389,5 @@
 /* -----------------------------
  Filter Model Poupup ends
 ------------------------------*/
+
+
