--- a/css/listing.css
+++ b/css/listing.css
@@ -17,7 +17,7 @@
   position: relative;
   background: #F6F6F6;
   width: 100%;
-  height: 10px;
+  height: 7px;
   overflow: hidden;
   border: 1rem; /* Adjust as needed */
 }
@@ -26,7 +26,7 @@
   border-radius: 0 1rem 1rem 0;
   background: var(--PRIMARY-MAIN, #0D99FF);
   height: 100%;
-  width: 40%; /* Change this value dynamically */
+  width: 0%; /* Change this value dynamically */
 }
 
 
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: .5rem 2rem;
 }
 
 .listing-header div {
@@ -95,7 +95,9 @@
 .set-your-pricing,
 .Amenites,
 .about-details,
-.edit-pictures {
+.edit-pictures ,
+.listing-section-main,
+.listing-property-details{
   display: flex;
   max-width: 720px;
   padding: 0px 64px;
@@ -103,9 +105,14 @@
   justify-content: center;
   align-items: center;
   margin: auto;
+  margin-top: 2rem;
   gap: 48px;
   flex-shrink: 0;
   border-radius: 16px;
+}
+
+.listing-search-main .section {
+  width: 100%;
 }
 
 
@@ -541,24 +548,21 @@ learn more
   letter-spacing: -0.32px;
 }
 
-.listing-property-details {
-  width: 100%;
-}
 
-.listing-property-details .listin-rooms {
+ .listin-rooms {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 0;
 }
 
-.listing-property-details .rooms-number {
+ .rooms-number {
   display: flex;
   align-items: center;
   gap: .5rem;
 }
 
-.listing-property-details .rooms-number div {
+ .rooms-number div {
   display: flex;
   padding: 8px;
   width: 38px;
@@ -896,6 +900,22 @@ input[type=text] {
   font-weight: 500;
   letter-spacing: -0.32px;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.continue-button-2 {
+display: flex;
+height: 48px;
+padding: 8px 24px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 16px;
+background: var(--Primary-Primary-50, #0D99FF);
+border: none;
+color: white;
+text-decoration: none;
 }
 
 .Add-listing-button {
@@ -917,6 +937,9 @@ input[type=text] {
   font-size: 16px;
   font-weight: 500;
   letter-spacing: -0.32px;
+
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .more-info-btn {
@@ -925,6 +948,8 @@ input[type=text] {
   text-decoration: underline;
   color: #0D99FF;
   padding: 0;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* model  */
@@ -946,7 +971,10 @@ input[type=text] {
 }
 
 .desktop-back-button {
-  display: inline-flex;
+  position: absolute;
+  top: 5.5rem;
+  left: 5%;
+  display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -955,7 +983,6 @@ input[type=text] {
   border-radius: 400px;
   border: 1px solid #E7E7E7;
   background: #FAFAFA;
-  margin-left: 5%;
 }
 
 /*----------------------------
