--- a/css/listing.css
+++ b/css/listing.css
@@ -901,6 +901,7 @@ input[type=text] {
   letter-spacing: -0.32px;
   text-decoration: none;
   cursor: pointer;
+  margin-top: 1rem;
 }
 
 .continue-button-2 {
